--- a/nightingale/index.Rmd
+++ b/nightingale/index.Rmd
@@ -10,9 +10,11 @@ assets:
   css:
   - "http://fonts.googleapis.com/css?family=Raleway:300"
   - "http://fonts.googleapis.com/css?family=Oxygen"
-
+  jshead:
+  - "../libraries/widgets/micropolar/js/d3.js"
+  - "../libraries/widgets/micropolar/js/micropolar.js"
 ---
-  
+
 <style>
 a {
   color: #08c !important
@@ -56,6 +58,7 @@ With the new [`micropolar` libary](http://micropolar.org) and [rCharts](http://r
 ```{r message = F, warning = F, error = F, echo = F, tidy = F, cache = F}
 require(knitr)
 opts_chunk$set(
+  echo=T,
   message = F,
   warning = F,
   error = F,
@@ -66,7 +69,7 @@ opts_chunk$set(
   fig.height = 5,
   rcharts="draft"
 )
-path = paste0(getwd(),"/libraries/widgets/micropolar")
+path = paste0("../libraries/widgets/micropolar")
 ```
 
 
@@ -104,11 +107,9 @@ Below is the code to generate the charts above.
 
 ```{r}
 require(rCharts)
-add_ext_widgets(path)
 
-
-make_dataset = function(x, y, data = data){
-  lapply(toJSONArray2(data[c(x, y)], json = F, names = F), unlist)
+make_dataset = function(data = data){
+  lapply(toJSONArray2(data, json = F, names = F), unlist)
 }
 
 
@@ -116,7 +117,7 @@ nightPlot <- rCharts$new()
 nightPlot$setLib( path )
 nightPlot$set(
   #remove [1:12] if you want Before and After to show on same plot
-  data = make_dataset( x = "month", y = "rate", night.df[1:12,] ),  
+  data = make_dataset( night.df[1:12, c("month","rate") ] ),  
   #data = make_dataset( x = "Month", y = "Deaths", subset(Night, Regime == "Before") ),
   radialDomain = c( 0, ceiling( max(night.df$rate) ) ),
   angularDomain = 
@@ -134,11 +135,10 @@ nightPlot$set(
 )
 cat(nightPlot$html(chartId="chart1"))
 
-
 nightPlot <- rCharts$new()
 nightPlot$setLib( path )
 nightPlot$set(
-  data = make_dataset( x = "month", y = "rate", night.df[13:24,] ),
+  data = make_dataset( night.df[13:24, c("month","rate")] ),
   #data = make_dataset( x = "Month", y = "Deaths", subset(Night, Regime == "After") ),
   radialDomain = c( 0, ceiling( max(night.df$rate) ) ),
   angularDomain = 
